--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </nav>
 
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('assets/img/Venice_Italy.jpg')">
+        <header class="masthead" style="background-image: url('img/Venice_Italy.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
