--- a/Html/BusiFun.html
+++ b/Html/BusiFun.html
@@ -48,7 +48,7 @@
 </body>
 </html>
 <body>
-    <img src="img/RomeStudyAbroad.jpg" alt="Buildings in Rome" width="100%" class ="fullwidthimage">
+    <img src="../img/RomeStudyAbroad.jpg" alt="Buildings in Rome" width="100%" class ="fullwidthimage">
     <h1 class="BusiFunTitle"> Business Fundamentals in Europe Study Abroad</h1>
     <h2 class="BusiFunTitle">  <a href="https://kennedy.byu.edu/" target="_blank" >BYU Kennedy Center</a> | <a href="https://marriott.byu.edu/" target="_blank" >BYU Marriott Business School</a></h2>
     
