--- a/Html/about.html
+++ b/Html/about.html
@@ -51,7 +51,7 @@
     </nav>
         <!-- Main Content-->
         <h1 class="middle">Resume</h1>
-        <img src="img/ChloeAndersen.jpg" alt="Chloe Andersen" width="20%" class ="middle">
+        <img src="../img/ChloeAndersen.jpg" alt="Chloe Andersen" width="20%" class ="middle">
 
         <h2 class="middle">Chloe Andersen</h2>
         <p class="middle">(901) 737 - 3707 | chloea18@byu.edu</p>
